--- a/src/components/JobDisplay.module.css
+++ b/src/components/JobDisplay.module.css
@@ -1,11 +1,12 @@
-.container {
+/* .container {
   background-color: hsl(180, 52%, 96%);
   width: 100%;
   margin: 0;
 
-  /* height: 2rem; */
-}
+} */
 .container2 {
+  background-color: hsl(180, 52%, 96%);
+  width: 100%;
   margin: 0;
   padding: 0;
 }
