--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,10 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-size: 15px;
+  font-family: "League Spartan";
+}
 /* @keyframes logo-spin {
   from {
     transform: rotate(0deg);
