--- a/src/components/JobDisplay.module.css
+++ b/src/components/JobDisplay.module.css
@@ -1,10 +1,10 @@
 .container {
-  background-color: hsl(180, 52%, 96%);
+  background-color: hsl(180, 52%, 93%);
   width: 100%;
   margin: 0;
   padding: 3rem 0;
 }
 .container2 {
-  background-color: hsl(180, 52%, 96%);
+  background-color: inherit;
   width: 100%;
 }
