--- a/src/components/JobList.module.css
+++ b/src/components/JobList.module.css
@@ -1,6 +1,6 @@
 .joblist {
   /* background-color: hsl(180, 31%, 95%); */
-  background-color: hsl(180, 52%, 96%);
+  background-color: hsl(180, 52%, 97%);
   box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.25);
   border-radius: 5px;
   display: flex;
@@ -73,11 +73,63 @@
 }
 .skills li {
   font-size: 15px;
-  background-color: hsl(180, 52%, 96%);
+  background-color: hsl(180, 29%, 92%);
   color: hsl(180, 29%, 50%);
-  padding: 3px 5px 0px;
+  padding: 7px 7px 0px;
   border-radius: 5px;
   letter-spacing: 0.5px;
   font-weight: 700;
-  margin-left: 1rem;
+  margin: 0 0 0.5rem 1rem;
+}
+
+/* Tablets / iPad ----------- */
+@media only screen and (max-width: 1024px) {
+  .joblist {
+    width: 85%;
+    padding: 1.5rem;
+    margin: 2rem auto;
+  }
+  .data_container {
+    display: flex;
+  }
+  #image {
+    width: 4.5rem;
+    height: 4.5rem;
+    margin-right: 1.5rem;
+  }
+  .photo_new_feature h3 {
+    font-size: 15px;
+    margin: 4px 0 0 0;
+  }
+  .photo_new_feature .new,
+  .photo_new_feature .featured {
+    font-size: 12px;
+    padding: 5px 5px 4px 6px;
+    border-radius: 6px;
+    letter-spacing: 1px;
+  }
+
+  .senior {
+    font-size: 18px;
+  }
+  .date_loaction p {
+    margin-right: 1rem;
+    background-color: inherit;
+  }
+  .date_loaction li {
+    margin-right: 1.5rem;
+  }
+  .skills {
+    margin: 2rem 0 2rem 0;
+  }
+  .skills li {
+    font-size: 11px;
+    padding: 7px 7px 0px;
+    letter-spacing: 0.5px;
+    margin: 0 0 1rem 0.5rem;
+  }
+}
+
+/* Mobile ----------- */
+@media only screen and (max-width: 767px) {
 }
