--- a/src/components/Header.module.css
+++ b/src/components/Header.module.css
@@ -6,4 +6,21 @@
   height: 8rem;
   width: 100%;
   background-color: hsl(180, 29%, 50%);
+  padding: 1.5rem 0 0 1.2rem;
+}
+#hamburger {
+  display: none;
+}
+/* iPad  */
+@media only screen and (max-width: 1024px) {
+}
+
+/* Mobile  */
+@media only screen and (max-width: 767px) {
+  #hamburger {
+    display: flex;
+    height: 2.5rem;
+    width: 2.3rem;
+    color: hsl(180, 52%, 97%);
+  }
 }
