--- a/src/components/Modal.module.css
+++ b/src/components/Modal.module.css
@@ -6,13 +6,14 @@
 }
 @media only screen and (max-width: 767px) {
   .backdrop {
+    display: flex;
     position: fixed;
     top: 0;
     left: 0;
     width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.5); /* Semi-transparent black */
-    z-index: 50; /* Ensure it appears above other content */
+    height: 100vh;
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: 1; /* Ensure it appears above other content */
   }
   .dialog {
     display: flex;
@@ -20,10 +21,10 @@
     background-color: hsl(180, 52%, 97%);
     box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.25);
     border-radius: 5px;
-    padding: 2rem;
+    padding: 1.5rem 1.5rem 0.5rem;
     border: none;
     margin: 0.5rem 0 2rem 2rem;
-    z-index: 100; /* Ensure it appears above other content */
+    z-index: 2; /* Ensure it appears above other content */
   }
   .dialog ul {
     padding: 0;
@@ -31,8 +32,8 @@
   }
   .dialog ul li {
     list-style-type: none;
-    font-size: 17px;
-    margin-bottom: 10px;
+    font-size: 18px;
+    margin-bottom: 12px;
     font-weight: 500;
     color: hsl(180, 29%, 60%);
   }
